sdlc_implementor: chore: update docs for Sprint Planner

--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,25 @@
 # ===========================================
-# CONVEX CONFIGURATION (Required)
+# SPRINT PLANNER CONFIGURATION
+# ===========================================
+
+# ===========================================
+# CONVEX (Required)
 # ===========================================
 
 # Convex deployment name - get this from `npx convex init`
 # Format: <project-name>-<deployment-name>
 CONVEX_DEPLOYMENT=
+
+# ===========================================
+# GOOGLE GEMINI (Required for Sprint Planner)
+# ===========================================
+
+# Google Gemini API key - get from https://ai.google.dev
+# Used for:
+#   - Gemini 3 Flash (gemini-3.0-flash-001): Fast code analysis & Architecture Legend generation
+#   - Gemini 3 Pro (gemini-3.0-pro-001): Deep video reasoning & Repair Manifest synthesis
+#   - Gemini File API: Large video uploads (up to 200MB, resumable)
+GOOGLE_GEMINI_API_KEY=
 
 # ===========================================
 # ADW / CLAUDE CODE (Required for AI workflows)
@@ -24,6 +39,7 @@ CLAUDE_BASH_MAINTAIN_PROJECT_WORKING_DIR=true
 # ===========================================
 
 # GitHub PAT - only needed if using different account than 'gh auth login'
+# or for accessing private repositories
 GITHUB_PAT=
 
 # Cloudflare tunnel token for webhook exposure
@@ -33,11 +49,8 @@ CLOUDFLARED_TUNNEL_TOKEN=
 # EXTERNAL APIS (Optional)
 # ===========================================
 
-# OpenAI - for Whisper transcription
+# OpenAI - for Whisper transcription (if needed)
 OPENAI_API_KEY=
-
-# Google Gemini - for image generation, etc.
-GOOGLE_GEMINI_API_KEY=
 
 # E2B - for cloud sandbox execution
 E2B_API_KEY=
