--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,9 @@
     "@types/node": "^22.10.1",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "convex-test": "^0.0.41",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "15.1.0",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
   }
