--- a/app/package.json
+++ b/app/package.json
@@ -11,10 +11,17 @@
   },
   "dependencies": {
     "@convex-dev/auth": "^0.0.80",
+    "@tailwindcss/postcss": "^4.1.17",
+    "autoprefixer": "^10.4.22",
+    "clsx": "^2.1.1",
     "convex": "^1.31.0",
+    "lucide-react": "^0.559.0",
     "next": "15.1.0",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
