test_runner: feature: add sign up flow to login page

--- a/.env.sample
+++ b/.env.sample
@@ -11,6 +11,17 @@
 CONVEX_DEPLOYMENT=
 
 # ===========================================
+# CONVEX AUTH (Required - set via Convex CLI)
+# ===========================================
+# These are SERVER-SIDE environment variables set via `npx convex env set`
+# NOT in this .env file. See README.md for setup instructions.
+#
+# AUTH_SECRET - Generate with: openssl rand -base64 32
+#   npx convex env set AUTH_SECRET "$(openssl rand -base64 32)"
+#
+# CONVEX_SITE_URL - Automatically set by Convex (built-in)
+
+# ===========================================
 # GOOGLE GEMINI (Required for Sprint Planner)
 # ===========================================
 
